fix(navbar): vertically align items

--- a/packages/osc-ui/src/components/Navbar/navbar.scss
+++ b/packages/osc-ui/src/components/Navbar/navbar.scss
@@ -162,6 +162,12 @@ $simple-nav-width: 250px;
         }
     }
 
+    > #{$self}__list {
+        @include mq(mq-token("desk")) {
+            align-items: center;
+        }
+    }
+
     &__list {
         --navbar-list-gap: #{$space-xl};
 
